custom container name and create superuser automation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.9'
 services:
   jwt_wala:
     image: jwt:latest
+    container_name: jwt_wala
     build:
       context: .
       network: host
